Attempt to fix submit button mobile/tablet issue
button is not showing up as styled.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -250,6 +250,8 @@ form {
 	font-weight: 300;
 	letter-spacing: 1px;
 	color: #FFF;
+	-webkit-appearance: none;
+	-moz-appearance: none;
 }
 
 #submit:hover {
